# pcsx2

./: .gitignore  .gitmodules  CMakeLists.txt  PCSX2_qt.sln  PCSX2_suite.sln
cmake/: BuildParameters.cmake  FindVtune.cmake  SearchForStuff.cmake
common/: BitUtils.h  CMakeLists.txt  Console.cpp  Console.h  EventSource.inl  Exceptions.h  FileSystem.cpp  FileSystem.h  FmtWX.h  IniInterface.cpp  Log.cpp  Log.h  LogSink.cpp  LogSink.h  Misc.cpp  Mutex.cpp  Pcsx2Defs.h  Perf.cpp  ProgressCallback.cpp  ProgressCallback.h  StringUtil.cpp  ThreadTools.cpp  Threading.h  Timer.cpp  Timer.h  TraceLog.h  VirtualMemory.cpp  WindowInfo.h  common.vcxproj  common.vcxproj.filters  wxAppWithHelpers.cpp  wxAppWithHelpers.h
pcsx2/: CMakeLists.txt  COP0.cpp  COP2.cpp  Cache.cpp  Config.h  Counters.cpp  Dump.cpp  Elfheader.cpp  FPU.cpp  FW.cpp  FiFo.cpp  GS.cpp  GS.h  GSState.cpp  GameDatabase.cpp  (+70 more)
pcsx2-qt/: BIOSSettingsWidget.cpp  BIOSSettingsWidget.h  CMakeLists.txt  DisplaySettingsWidget.cpp  DisplaySettingsWidget.h  DisplaySettingsWidget.ui  DisplayWidget.cpp  DisplayWidget.h  EmuThread.cpp  EmuThread.h  EmulationSettingsWidget.cpp  EmulationSettingsWidget.h  EmulationSettingsWidget.ui  GameListModel.cpp  GameListModel.h  GameListRefreshThread.cpp  GameListRefreshThread.h  GameListSettingsWidget.cpp  GameListSettingsWidget.h  GameListSettingsWidget.ui  GameListWidget.cpp  GameListWidget.h  GraphicsSettingsWidget.cpp  GraphicsSettingsWidget.h  GraphicsSettingsWidget.ui  InterfaceSettingsWidget.cpp  InterfaceSettingsWidget.h  InterfaceSettingsWidget.ui  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PrecompiledHeader.h  QtHost.cpp  QtHost.h  QtKeyCodes.cpp  QtUtils.cpp  QtUtils.h  SettingWidgetBinder.h  SettingsDialog.cpp  (+7 more)
pcsx2-qt/resources/: resources.qrc
(+418 files in other folders)
